@@ -14,17 +14,16 @@ public class SqlScriptExecutorTest extends DbTestBase {
 
   @Test
   public void testPlain() {
-    var script = "begin;\n";
-    script += "insert into V set name ='a';\n";
+    session.begin();
+    var script = "insert into V set name ='a';\n";
     script += "insert into V set name ='b';\n";
     script += "insert into V set name ='c';\n";
     script += "insert into V set name ='d';\n";
-    script += "commit;\n";
     script += "select from v;";
 
     var result = session.execute("sql", script);
     var list =
-        result.stream().map(x -> x.getProperty("name")).collect(Collectors.toList());
+        result.stream().map(x -> x.getProperty("name")).toList();
     result.close();
 
     Assert.assertTrue(list.contains("a"));
@@ -32,36 +31,36 @@ public class SqlScriptExecutorTest extends DbTestBase {
     Assert.assertTrue(list.contains("c"));
     Assert.assertTrue(list.contains("d"));
     Assert.assertEquals(4, list.size());
+    session.commit();
   }
 
   @Test
   public void testWithPositionalParams() {
-    var script = "begin;\n";
-    script += "insert into V set name ='a';\n";
+    session.begin();
+    var script = "insert into V set name ='a';\n";
     script += "insert into V set name ='b';\n";
     script += "insert into V set name ='c';\n";
     script += "insert into V set name ='d';\n";
-    script += "commit;\n";
-    script += "select from v where name = ?;";
+    script += "select from v where name = ?;\n";
 
     var result = session.execute("sql", script, "a");
+
     var list =
         result.stream().map(x -> x.getProperty("name")).collect(Collectors.toList());
     result.close();
-
     Assert.assertTrue(list.contains("a"));
 
     Assert.assertEquals(1, list.size());
+    session.commit();
   }
 
   @Test
   public void testWithNamedParams() {
-    var script = "begin;\n";
-    script += "insert into V set name ='a';\n";
+    session.begin();
+    var script = "insert into V set name ='a';\n";
     script += "insert into V set name ='b';\n";
     script += "insert into V set name ='c';\n";
     script += "insert into V set name ='d';\n";
-    script += "commit;\n";
     script += "select from v where name = :name;";
 
     Map<String, Object> params = new HashMap<String, Object>();
@@ -69,23 +68,23 @@ public class SqlScriptExecutorTest extends DbTestBase {
 
     var result = session.execute("sql", script, params);
     var list =
-        result.stream().map(x -> x.getProperty("name")).collect(Collectors.toList());
+        result.stream().map(x -> x.getProperty("name")).toList();
     result.close();
 
     Assert.assertTrue(list.contains("a"));
 
     Assert.assertEquals(1, list.size());
+    session.commit();
   }
 
   @Test
   public void testMultipleCreateEdgeOnTheSameLet() {
-    var script = "begin;\n";
-    script += "let $v1 = create vertex v set name = 'Foo';\n";
+    session.begin();
+    var script = "let $v1 = create vertex v set name = 'Foo';\n";
     script += "let $v2 = create vertex v set name = 'Bar';\n";
     script += "create edge from $v1 to $v2;\n";
     script += "let $v3 = create vertex v set name = 'Baz';\n";
     script += "create edge from $v1 to $v3;\n";
-    script += "commit;";
 
     var result = session.execute("sql", script);
     result.close();
@@ -93,5 +92,6 @@ public class SqlScriptExecutorTest extends DbTestBase {
     result = session.query("SELECT expand(out()) FROM V WHERE name ='Foo'");
     Assert.assertEquals(2, result.stream().count());
     result.close();
+    session.commit();
   }
 }
